# PlasticDetectionService

./: .env.sample  .gitignore  Readme.md  clear_water.geojson  debris_prediction.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: job.yml  lint_test.yml  python-format-lint.yml  run.yml  schedule.yml  worker.yml
assets/: coastal_area_ww.py  storage_estimation.py
docs/: Readme.md  compontent_diagram.puml  container_diagram.puml  self_reflection_se35_software_modeling_and_design_patterns.md  software_design_documentation.md  system_context_diagram.puml
eoexecution-report-2023_09_08-11_16_15/: report.html
geo_helper/: area.py  geojson.py
marinedebrisdetector/: predictor.py  test.py  train.py  transforms.py
marinedebrisdetector/data/: durban.py  label_refinement.py  utils.py  (+2 more)
plastic_detection_service/: cli.py  config.py  constants.py  db.py  download_images.py  downstream.py  dt_util.py  evalscripts.py  gdal_ds.py  models.py  patches.py  plot_patches.py  reproject.py  reproject_raster.py  reproject_vector.py  round.py  s3.py  sagemaker_endpoint.py  scaling.py  stream.py  to_vector.py  to_wkb.py  types.py
sagemaker/: create_endpoint.py  create_model.py  endpoint.py  invoke.py
scripts/: add_job_to_db.py  add_model_to_db.py  add_tables.py  coastal_area_ww.py  download_s3_folder.py  fdi.py  geom_to_bbox.py  plot.py  reset_db.py  storage_estimation.py  update_aoi.py
src/: config.py  geo_utils.py  main.py  models.py  scl.py  vector_op.py
tests/: conftest.py  test_download_images.py  test_e2e.py  test_models.py  test_scl.py
(+118 files in other folders)
